--- a/package.json
+++ b/package.json
@@ -46,8 +46,10 @@
     }
   },
   "dependencies": {
+    "@emotion/css": "^11.9.0",
     "electron-is-dev": "^2.0.0",
     "electron-squirrel-startup": "^1.0.0",
+    "emotion": "^11.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   },
