--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
     "noEmit": true,
     "jsx": "react-jsx"
   },
-  "include": ["src"],
+  "include": ["src/*.tsx", "components/layout/*.tsx"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
 
