--- a/package.json
+++ b/package.json
@@ -6,18 +6,14 @@
   "main": "src/index.js",
   "scripts": {
     "dev": "vite & electron .",
-    "start": "electron-forge start",
-    "package": "electron-forge package",
-    "make": "electron-forge make",
-    "publish": "electron-forge publish",
-    "lint": "echo \"No linting configured\""
+    "build": "vite build && electron-forge make",
+    "lint": "eslint"
   },
   "keywords": [],
   "author": {
     "name": "javaboy-github",
     "email": "75339009+javaboy-github@users.noreply.github.com"
   },
-  "license": "MIT",
   "config": {
     "forge": {
       "packagerConfig": {},
@@ -45,11 +41,13 @@
       ]
     }
   },
+  "license": "MIT",
   "dependencies": {
     "@emotion/css": "^11.9.0",
     "electron-is-dev": "^2.0.0",
     "electron-squirrel-startup": "^1.0.0",
     "emotion": "^11.0.0",
+    "eslint": "^8.14.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   },
@@ -63,6 +61,8 @@
     "@types/react-dom": "^18.0.2",
     "@vitejs/plugin-react": "^1.3.1",
     "electron": "18.1.0",
+    "electron-builder": "^23.0.3",
+    "electron-forge": "^0.0.5",
     "typescript": "^4.6.3",
     "vite": "^2.9.5"
   }
