--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "electron-squirrel-startup": "^1.0.0",
     "emotion": "^11.0.0",
     "eslint": "^8.14.0",
+    "express": "^4.18.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   },
