--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "My Electron application description",
   "main": "src/index.js",
   "scripts": {
-    "dev": "node src/watch.mjs",
+    "dev": "vite react & electron .",
     "build": "vite build && electron-forge make",
     "lint": "eslint"
   },
