--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "dev": "vite react & electron .",
     "build": "vite build && electron-forge make",
-    "lint": "eslint"
+    "lint": "eslint --ext .tsx,.ts react/",
+    "lintfix": "npm run lint -- --fix"
   },
   "keywords": [],
   "author": {
@@ -48,7 +49,7 @@
     "electron-is-dev": "^2.0.0",
     "electron-squirrel-startup": "^1.0.0",
     "emotion": "^11.0.0",
-    "eslint": "^8.14.0",
+    "eslint-config-airbnb-typescript": "^17.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   },
@@ -60,10 +61,18 @@
     "@electron-forge/maker-zip": "^6.0.0-beta.63",
     "@types/react": "^18.0.6",
     "@types/react-dom": "^18.0.2",
+    "@typescript-eslint/eslint-plugin": "^5.23.0",
+    "@typescript-eslint/parser": "^5.23.0",
     "@vitejs/plugin-react": "^1.3.1",
     "electron": "18.1.0",
     "electron-builder": "^23.0.3",
     "electron-forge": "^0.0.5",
+    "eslint": "^8.15.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react-hooks": "^4.5.0",
     "typescript": "^4.6.3",
     "vite": "^2.9.5"
   }
