--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,6 +22,7 @@
         "@emotion"
     ],
     "rules": {
-        "indent": ["error", "tab"]
+        "indent": ["error", "tab"],
+        "react/react-in-jsx-scope": "off"
     }
 }
