use gray-matter

--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "electron-squirrel-startup": "^1.0.0",
     "emotion": "^11.0.0",
     "eslint-config-airbnb-typescript": "^17.0.0",
+    "gray-matter": "^4.0.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "remark": "^14.0.2",
